--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@
     margin: 0;
     padding: 0;
 }
+
+
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li{
+    list-style: none;
+    margin: 0 10px;
+    display: inline-block;
+    line-height: 50px;
+    position: relative;
+}
