--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 }
 
 
+.header {
+    background-image: url(img/bg-masthead.jpg);
+}
+
 .nav-links{
     flex: 1;
     text-align: right;
@@ -15,4 +19,10 @@
     display: inline-block;
     line-height: 50px;
     position: relative;
+}
+
+.nav-links ul li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
 }
