--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     min-height: 100vh;
     width: 100%;
     background-image: url(img/bg-masthead.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 
 .nav-links{
@@ -28,3 +31,4 @@
     color: #fff;
     text-transform: uppercase;
 }
+
