--- a/style.css
+++ b/style.css
@@ -32,3 +32,16 @@
     text-transform: uppercase;
 }
 
+.content{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color:#fff;
+}
+
+.content h1{
+    font-size: 50px;
+    margin-top: 80px;
+}
