--- a/style.css
+++ b/style.css
@@ -45,3 +45,9 @@
     font-size: 50px;
     margin-top: 80px;
 }
+
+.content p{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+}
