--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: url(img/bg-masthead.jpg);
+    background-image: linear-gradient(rgba(68, 59, 54, 0.5),rgba(209, 150, 118, 0.5)), url(img/bg-masthead.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
