--- a/style.css
+++ b/style.css
@@ -48,6 +48,29 @@
 
 .content p{
     margin: 20px auto;
-    font-weight: 100;
+    font-weight: 400;
     line-height: 25px;
+}
+
+button{
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 0px;
+    background: transparent;
+    color: #fff;
+    position: relative;
+}
+span {
+    background: #ff7700;
+    height: 100%;
+    width: 100%;
+    border-radius: 35px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
