--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
 }
@@ -81,4 +81,4 @@ span {
     font-size:1.1em;
     color: white;
     font-size: 24px;
-}
+} */
