--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button{
     position: relative;
 }
 
-span {
+/* span {
     background: #ff7700;
     height: 100%;
     width: 100%;
@@ -55,4 +55,6 @@ span {
     right: 0;
     bottom: 0;
     z-index: -1;
-}
+} */
+
+.
